fixed overflow

--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -11,13 +11,13 @@ body{
     box-sizing: border-box;
     height: 100vh;
     min-height: 100vh;
-    width: 100%;
+    width: 100vw;
 }
 
 .main-body{
     position: absolute;
     top: 0;
-    width: 100%;
+    width: 100vw;
     right: 0;
     z-index: 0;
     background-color: $primary_color;
